[improve][core][script] enable Java security to support JDK 21+